# hexagonal_life_engine

./: AGENTS.md  README.md
hex_engine/: CMakeLists.txt  README.md
hex_engine/examples/: sample.world.json
hex_engine/include/hex_engine/: cell_kind.h  hex_coord.h  world.h
hex_engine/scripts/: default_rules.lua
hex_engine/src/: main.cpp  world.cpp
hex_engine/tools/HexSaveTool/: HexSaveTool.csproj  Program.cs
notes/: Overview.md  Project Brief The Life Engine Hex.md
notes/Architecture/: Hex Engine Architecture.md
notes/Branding/: Life Engine Logo.md
notes/Checklist/: Laptop And Project Setup.md
notes/Decisions/: Foundation Decisions.md  Lua Runtime Strategy.md  Repository Hygiene.md
notes/Design/: Synthetic Lab Design.md
notes/Features/: Initial Scaffold.md
notes/Research/: The Life Engine Research.md
notes/Roadmap/: Hex Engine Roadmap.md
notes/Systems/: Hex Simulation Core.md
notes/Usage/: Run Instructions.md
stitch_hexagonal_life_engine/: extracted_text_from_https_thelifeengine.net.md  project_brief_the_life_engine_hex.md
stitch_hexagonal_life_engine/community_hub_hex_edition/: code.html
stitch_hexagonal_life_engine/ecosystem_stats_hex_edition/: code.html
stitch_hexagonal_life_engine/genome_editor_hex_edition/: code.html
stitch_hexagonal_life_engine/life_engine_hex_pixel_perfect_replica/: code.html
stitch_hexagonal_life_engine/synthetic_lab/: DESIGN.md
